cmake_minimum_required(VERSION 3.10)

project(project CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

find_package(SFML REQUIRED system graphics window network)
include(default-options.cmake)
include_directories(include)
target_link_libraries(project sfml-graphics sfml-system sfml-window sfml-network)
